# maple

./: .gitignore  2  :w  Cargo.toml  README.md  \  build.rs
crates/maple_3d/: Cargo.toml
crates/maple_3d/res/primitives/: smooth_sphere.glb
crates/maple_3d/res/shaders/PBR/: PBR.vert
crates/maple_3d/res/shaders/bloom/: bright.wgsl  upsample.frag.wgsl
crates/maple_3d/res/shaders/cubeDepthShader/: cubeDepthShader.frag  cubeDepthShader.vert
crates/maple_3d/res/shaders/debug/: cascade.frag.wgsl
crates/maple_3d/res/shaders/default/: default.frag  default.frag.spv  default.frag.wgsl  default.vert  default.vert.spv  default.vert.wgsl  skybox.frag.wgsl  skybox.vert.wgsl
crates/maple_3d/res/shaders/depthShader/: depthShader.geom  depthShader.vert
crates/maple_3d/res/shaders/directional_shadow/: directional_shadow.frag.wgsl  directional_shadow.vert.wgsl
crates/maple_3d/res/shaders/environment/: brdf_lut.wgsl  flat_to_cube.frag.wgsl  flat_to_cube.vert.wgsl  irradiance.frag.wgsl
crates/maple_3d/res/shaders/point_shadow/: point_shadow.frag.wgsl  point_shadow.vert.wgsl
crates/maple_3d/res/shaders/post_process/: blit.frag.wgsl
crates/maple_3d/res/shaders/shadowMap/: shadowMap.vert
crates/maple_3d/src/: gltf.rs  lib.rs  material.rs  plugin.rs
crates/maple_3d/src/assets/: material.rs  mesh.rs  mod.rs
crates/maple_3d/src/assets/materials/: mod.rs  pbr.frag.wgsl  pbr.vert.wgsl  pbr_material.rs
crates/maple_3d/src/assets/primitives/: cuboid.rs  mod.rs  plane.rs  sphere.rs  torus.rs  triangle.rs
crates/maple_3d/src/components/: material.rs  mesh.rs
crates/maple_3d/src/math/: aabb.rs  frustrum.rs  mod.rs  vertex.rs
crates/maple_3d/src/nodes/: camera.rs  directional_light.rs  environment.rs  mesh.rs  mesh_instance.rs  mod.rs  model.rs  point_light.rs
crates/maple_3d/src/render_passes/: blit.vert.wgsl  bloom.rs  cascade.frag.wgsl  collect_mesh.rs  composite_pass.rs  directional_shadow.frag.wgsl  directional_shadow.vert.wgsl  directional_shadow_pass.rs  downsample.wgsl  environment.rs  irradiance.frag.wgsl  main_pass.rs  mod.rs  point_shadow.frag.wgsl  point_shadow.vert.wgsl  point_shadow_pass.rs  post_process_pass.rs  prefilter.wgsl  scene_textures.rs  shadow_pass.rs  shadow_resource.rs  skybox.frag.wgsl  skybox.rs  skybox.vert.wgsl  upsample.vert.wgsl
crates/maple_app/: Cargo.toml
crates/maple_app/src/: app.rs  app_error.rs  config.rs  default_plugin.rs  lib.rs  plugin.rs
crates/maple_audio/: Cargo.toml
crates/maple_audio/src/: asset.rs  lib.rs  plugin.rs  resource.rs  settings.rs  sound.rs
crates/maple_audio/src/nodes/: audio_listener.rs  audio_source.rs  mod.rs
crates/maple_derive/: Cargo.toml  README.md
crates/maple_derive/src/: lib.rs
crates/maple_egui/: Cargo.toml
crates/maple_egui/src/: egui.wgsl  input.rs  lib.rs  plugin.rs  render.rs
crates/maple_engine/: Cargo.toml
crates/maple_engine/src/: asset.rs  color.rs  context.rs  lib.rs  platform.rs  scene.rs
crates/maple_engine/src/components/: event_reciever.rs  mesh.rs  mod.rs  node_transform.rs
crates/maple_engine/src/context/: fps_manager.rs  game_context.rs  input_manager.rs  mod.rs
crates/maple_engine/src/input/: bindings.rs  input_manager.rs  mod.rs
crates/maple_engine/src/nodes/: container.rs  empty.rs  mod.rs  node.rs  node_builder.rs
crates/maple_engine/src/resources/: frame.rs  input.rs  mod.rs
crates/maple_engine/src/scene/: core.rs  mod.rs  new_scene.rs  old_scene.rs  scene.rs  scene_builder.rs
crates/maple_engine/src/utils/: color.rs  config.rs  debug.rs  mod.rs
crates/maple_physics/: Cargo.toml
crates/maple_physics/src/: lib.rs  plugin.rs  resource.rs
crates/maple_physics/src/nodes/: character_controller.rs  collider.rs  mod.rs  rigid_body.rs
crates/maple_rapier/: Cargo.toml
crates/maple_renderer/: Cargo.toml  \
crates/maple_renderer/src/: buffer.rs  lib.rs  render_pass.rs  renderer.rs  shader_asset.rs  texture_asset.rs
crates/maple_renderer/src/backend/vulkan/: backend.rs  descriptor_set.rs  mod.rs  pipeline.rs  render_pass.rs  shader.rs
crates/maple_renderer/src/backend/vulkan/buffer/: data_buffer.rs  framebuffer.rs  mod.rs
crates/maple_renderer/src/backend/wgpu/: backend.rs
crates/maple_renderer/src/core/: backend.rs  buffer.rs  command_builder.rs  context.rs  descriptor_set.rs  device.rs  frame_builder.rs  mipmap_generator.rs  mipmap_generator.wgsl  mod.rs  pipeline.rs  queue.rs  render_pass.rs  renderer.rs  shader.rs  texture.rs
crates/maple_renderer/src/render_graph/: graph.rs  node.rs
crates/maple_renderer/src/types/: default_texture.rs  dimensions.rs  drawable.rs  error.rs  globals.rs  lazy_buffer.rs  mod.rs  render_config.rs  setup_render.rs  vertex.rs  world.rs
crates/maple_renderer/src/vulkan/: mod.rs  render_pass.rs  shader.rs
crates/maple_renderer/src/vulkan/buffer/: data_buffer.rs  mod.rs
examples/: audio.rs  blend_test.rs  bloom.rs  colliders.rs  egui.rs  example.rs  instancing.rs  lighting.rs  mandelbrot.rs  model_loading.rs  physics.rs  player_controller.rs  simple_scene.rs  test.rs  test_ready.rs  test_ready_full.rs  weird.rs
examples/bloom/: main.rs
examples/instancing/: main.rs
examples/landscape/: main.rs
examples/lighting/: main.rs
examples/mandelbrot/: main.rs
examples/model_loading/: main.rs  main_scene.rs
examples/physics_demo/: main.rs  physics_scene.rs
examples/player_controller/: main.rs  player_scene.rs
examples/scenes/: main_scene.rs  mod.rs  ui_scene.rs
examples/shader_toy/: main.rs
examples/tutorial/: main.rs  main_scene.rs
guide/: book.toml
guide/src/: 3d-rendering.md  SUMMARY.md  behavior.md  getting-started.md  introduction.md  physics.md  scenes.md
maple_egui/: Cargo.toml
quaturn_derive/: Cargo.toml
quaturn_derive/src/: lib.rs
res/primitives/: cone.glb  cube.glb  cylinder.glb  plane.glb  pyramid.glb  sphere.glb  teapot.glb  torus.glb
res/scenes/: flat_vs_smooth.gltf  planet_thing.gltf  smooth_monkey.gltf
res/shaders/: fragmentShader.frag  vertexShader.vert
src/: lib.rs  main.rs
src/components/: event_reciever.rs  mesh.rs  mod.rs  node_transform.rs
(+127 files in other folders)
