[package]
name = "maple"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/ToothlessBrush/maple"
description = "A 3D game engine"
license = "MIT"
authors = ["ToothlessBrush <johnklein514@gmail.com"]
readme = "README.md"
keywords = ["3d", "game", "engine", "gamedev", "graphics"]
categories = ["game-engines", "graphics"]

include = [
    "res/primitives/**/*",
    "res/shaders/**/*",
    "**/*.rs",
    "cargo.toml"
]

exclude = [
    "res/models/**/*"
]

[lib]
name = "maple"
path = "src/lib.rs"

[dependencies]
colored = "2.1.0"
dyn-clone = "1.0.17"
egui_gl_glfw = "0.1.9"
gltf = { version = "1.4.1", features = ["KHR_materials_pbrSpecularGlossiness"] }
image = "0.25.6"
nalgebra-glm = "0.18.0"
stb_image = "0.3.0"
maple_derive = "0.1.0"

[build-dependencies]
gl_generator = "0.14.0"
