[package]
name = "maple"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/ToothlessBrush/maple"
description = "A 3D game engine"
license = "MIT"
authors = ["ToothlessBrush <johnklein514@gmail.com"]
readme = "README.md"
keywords = ["3d", "game", "engine", "gamedev", "graphics"]
categories = ["game-engines", "graphics"]

include = [
    "res/primitives/**/*",
    "res/shaders/**/*",
    "**/*.rs",
    "cargo.toml"
]

exclude = [
    "res/models/**/*"
]

[lib]
name = "maple"
path = "src/lib.rs"

[workspace]
members = ["crates/*"]

[dependencies]
maple_app = {path = "./crates/maple_app", version = "0.1.0"}
maple_renderer = {path = "./crates/maple_renderer", version = "0.1.0"}
maple_engine = {path = "./crates/maple_engine", version = "0.1.0"}
maple_derive = {path = "./crates/maple_derive/", version = "0.1.0"}
bytemuck = "1.23.2"
anyhow = "1.0.99"

