[package]
name = "maple"
version = "0.3.0-dev"
edition = "2024"
repository = "https://github.com/ToothlessBrush/maple"
description = "A 3D game engine"
license = "MIT"
authors = ["ToothlessBrush <johnklein514@gmail.com"]
readme = "README.md"
keywords = ["3d", "game", "engine", "gamedev", "graphics"]
categories = ["game-engines", "graphics"]

include = [
    "res/primitives/**/*",
    "res/shaders/**/*",
    "**/*.rs",
    "cargo.toml"
]

exclude = [
    "res/models/**/*"
]

[lib]
name = "maple"
path = "src/lib.rs"

[features]
default =  ["3d", "physics"]
3d = ["dep:maple_3d"]
physics = ["dep:maple_physics"]

[workspace]
members = ["crates/*"]

[dependencies]
# maple
maple_app = {path = "./crates/maple_app", version = "0.3.0-dev"}
maple_renderer = {path = "./crates/maple_renderer", version = "0.3.0-dev"}
maple_engine = {path = "./crates/maple_engine", version = "0.3.0-dev"}
maple_derive = {path = "./crates/maple_derive/", version = "0.3.0-dev"}
maple_3d = {path = "./crates/maple_3d",  version = "0.3.0-dev", optional = true}
maple_physics = {path = "./crates/maple_physics", version = "0.3.0-dev", optional = true}
# other
bytemuck = "1.23.2"
anyhow = "1.0.99"
glam = { version = "0.30.5", features = ["glam-assert"] }
log = "0.4"

[dev-dependencies]
maple_physics = {path = "./crates/maple_physics", version = "0.3.0-dev"}
env_logger = "0.11"

