[package]
name = "maple_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
winit = "0.30.12"
maple_renderer = {path = "../maple_renderer", version = "0.1.0"}
maple_engine = {path = "../maple_engine", version = "0.1.0"}
bitflags = "2.9.1"
bytemuck = "1.23.2"
log = "0.4.27"
env_logger = "0.11.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
