[package]
name = "maple_audio"
description = "implements audio for maple"
license = "MIT"
version = "0.3.0"
edition = "2024"

[dependencies]
rapier3d = {version = "0.34.0", feature = ["parallel"]}
maple_engine = {path = "../maple_engine", version = "0.3.0"}
maple_app = {path = "../maple_app", version = "0.3.0"}
glam = "0.33.2"
log = "0.4"
kira = "0.12.1"
parking_lot = "0.12.5"
