[package]
name = "maple_derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ToothlessBrush <johnklein514@gmail.com"]
readme = "README.md"
description = "Derive macros for maple"




[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "1.0.95", feature = ["full", "extra-traits"] }
quote = "1.0.40"
syn = "2.0.101"
