[package]
name = "maple_egui"
description = "Egui for Maple"
license = "MIT"
version = "0.3.0"
edition = "2024"

[dependencies]
maple_app = { path = "../maple_app", version = "0.3.0" }
maple_renderer = { path = "../maple_renderer", version = "0.3.0" }
maple_engine = { path = "../maple_engine", version = "0.3.0" }
egui = "0.35.0"
glam = "0.33.2"
bytemuck = "1.25.1"
