[package]
name = "maple_physics"
version = "0.3.0"
edition = "2024"

[dependencies]
nalgebra = {version = "0.34.1", features = ["convert-glam030"]}
rapier3d = "0.30.1"
maple_engine = {path = "../maple_engine", version = "0.3.0"}
maple_app = {path = "../maple_app", version = "0.3.0"}
glam = "0.30.9"
log = "0.4"
