[package]
name = "maple_physics"
description = "implements rapier3d for maple"
license = "MIT"
version = "0.3.0"
edition = "2024"

[dependencies]
nalgebra = {version = "0.34.1", features = ["convert-glam030"]}
rapier3d = {version = "0.30.1", feature = ["parallel"]}
maple_engine = {path = "../maple_engine", version = "0.3.0"}
maple_app = {path = "../maple_app", version = "0.3.0"}
glam = "0.30.9"
log = "0.4"
