[package]
name = "maple_renderer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
bytemuck = "1.23.2"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
wgpu = { version = "26.0.1", features = ["glsl", "spirv"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
