[package]
name = "maple_renderer"
description = "Renderer for the maple engine"
license = "MIT"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1.11.0"
anyhow = "1.0.98"
bitflags = "2.9.1"
bytemuck = "1.23.2"
env_logger = "0.11.8"
image = { version = "0.25.6", features = ["hdr"] }
log = "0.4.27"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
wgpu = { version = "26.0.1", features = ["glsl", "spirv"] }
parking_lot = "0.12.4"
thiserror = "2.0.16"

# maple
maple_engine = {path = "../maple_engine/", version = "0.3.0"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgpu", "webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
